feat: :sparkles: add a new Upvote handler and route
